start setup settings, individual interval works

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -9,6 +9,7 @@
     </head>
 
     <body onload="setup()">
+        <button onclick="reset()">reset</button>
         <button onclick="pickSrc()">pick source</button>
         <h1>Rate your Video</h1>
         <video id="video_player" width="320" height="240" muted="true">
