--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -9,13 +9,21 @@
     </head>
 
     <body onload="setup()">
-        <button onclick="reset()">reset</button>
-        <button onclick="pickSrc()">pick source</button>
-        <h1>Rate your Video</h1>
-        <video id="video_player" width="320" height="240" muted="true">
-            <source id = "video_src" type="video/mp4">
-        </video>
-        <button onclick="start()">test</button>
+        <div>
+            <button onclick="reset()">reset</button>
+            <h1>Title</h1>
+        </div>
+        <div>
+            <button onclick="pickSrc()">pick source</button>
+            </br>
+            <h2>Rate your Video</h1>
+            <video id="video_player" width="640" height="280" muted="true">
+                <source id = "video_src" type="video/mp4">
+            </video>
+            </br>
+            <button onclick="start()">test</button>
+        </div>
+        
         <div id="ratingScale">
             <button onclick="submit(1)">1</button>
             <button onclick="submit(2)">2</button>
