--- a/Views/results.html
+++ b/Views/results.html
@@ -2,11 +2,16 @@
 <html>
     <head>
         <title>Results</title>
-        <link href="./css/index.css" type="text/css" rel="stylesheet">
-        <script src="./js/index.js"></script>
+        <link href="../css/results.css" type="text/css" rel="stylesheet">
+        <script src="../js/settings.js"></script>
+        <script src="../js/results.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     </head>
-    <body onload="setup()">
+    <body onload="showGraph()">
+        <div>
+            <button onclick="reset()">reset</button>
+            <h1>Title</h1>
+        </div>
         <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
     </body>
 </html>
