--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,20 @@
-h1{
-    color: red
+body{
+    text-align: center;
 }
 
-h2{
-    background-color: blue
+div{
+    min-height: 20px;
+    margin: auto;
+    width: fit-content;
+    /*min-width: 200px;*/
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+input{
+    width: 40px;
+}
+
+button{
+    margin: 20px;
 }
