rating buttons created based on scales

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -3,7 +3,6 @@
     <head>
         <title>Rating</title>
         <link href="../css/experiment.css" type="text/css" rel="stylesheet">
-        <link href="../css/settings.css" type="text/css" rel="stylesheet">
         <script src="../js/rating.js"></script>
         <script src="../js/settings.js"></script>
     </head>
@@ -25,11 +24,12 @@
         </div>
         
         <div id="ratingScale">
-            <button onclick="submit(1)">1</button>
+            <!--<button onclick="submit(1)">1</button>
             <button onclick="submit(2)">2</button>
             <button onclick="submit(3)">3</button>
             <button onclick="submit(4)">4</button>
-            <button onclick="submit(5)">5</button>
+            <button onclick="submit(5)">5</button>!-->
+
         </div>
     </body>
 </html>
