--- a/Views/index.html
+++ b/Views/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Start Page</title>
+        <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
         <link href="../css/index.css" type="text/css" rel="stylesheet">
         <script src="../js/settings.js"></script>
     </head>
