--- a/Views/results.html
+++ b/Views/results.html
@@ -3,12 +3,13 @@
     <head>
         <title>Results</title>
         <link href="../css/results.css" type="text/css" rel="stylesheet">
+        <link href="../css/basicLayout.css" type="text/css" rel="stylesheet">
         <script src="../js/settings.js"></script>
         <script src="../js/results.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     </head>
     <body onload="createData()">
-        <div>
+        <div class = "header">
             <button onclick="reset()">reset</button>
             <h1>Title</h1>
         </div>
