Index Page update: takes name and variable, settings in accordion menu, toggle switch for pause/start input/end input

--- a/Views/experiment.html
+++ b/Views/experiment.html
@@ -17,12 +17,7 @@
             <h2>Rate your Video</h2>
         </div>
         <div id="videoContainer" class="videoContainer">
-            <h2>Please enter your name</h2>
-            <input type="text" id="nameField">
-            <h2>What variable are you rating?</h2>
-            <input type="text" id="varField">
-            </br>
-            <button onclick="submitNameAndVar()">submit</button>
+            <button onclick='setUpVideo()'>pick source</button>"
         </div>
         <div id="ratingScale"></div>
     </body>
