--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,92 @@
-div{
-    min-height: 20px;
-    margin: auto;
-    width: fit-content;
-    /*min-width: 200px;*/
-    text-align: center;
-    margin-bottom: 10px;
+/*based on https://www.w3schools.com/howto/howto_js_accordion.asp*/
+.settingAccordionTrigger{
+    background-color: lightblue;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
 }
 
-input{
+.active, .settingAccordionTrigger:hover {
+    background-color: turquoise;
+}
+
+.settingAccordion{
+    padding: 0 18px;
+    background-color: grey;
+    overflow: hidden;
+    max-height: 0;
+}
+
+.settingAccordionTrigger:after {
+    content: '\02795';
+    font-size: 13px;
+    color: black;
+    float: right;
+    margin-left: 5px;
+}
+  
+.active:after {
+    content: "\2796";
+}
+
+.nrInput{
     width: 40px;
 }
 
-button{
-    margin: 20px;
-}
+/*based on https://www.w3schools.com/howto/howto_css_switch.asp*/
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 17px;
+    width: 17px;
+    left: 1px;
+    bottom: 0px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(12px);
+    -ms-transform: translateX(12px);
+    transform: translateX(12px);
+  }
