--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -1,17 +1,47 @@
 body{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
+    background: rgb(17,214,164);
+    background: linear-gradient(
+        90deg,
+        rgba(10,129,130,1) 0%,
+        rgba(12,148,131,1) 16%,
+        rgba(12,148,113,1) 34%,
+        rgba(17,214,164,1) 50%,
+        rgba(12,148,113,1) 66%,
+        rgba(12,148,131,1) 84%,
+        rgba(10,129,130,1) 100%
+    );
 }
 
 .header{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 99;
     min-height: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(211, 211, 211, 0.632);
+    margin: 0px 0px 20px 0px;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    z-index: 99;
+    min-height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(211, 211, 211, 0.632);
+    margin: 20px 0px 0px 0px;
 }
 
 .header button{
