--- a/css/basicLayout.css
+++ b/css/basicLayout.css
@@ -39,6 +39,7 @@ body{
     max-height: 40px;
     width: auto;
     margin: 10px;
+    cursor: pointer;
 }
 
 /*icon source: https://www.flaticon.com/free-icon/home_1946436?term=home&page=1&position=3&origin=tag&related_id=1946436*/
@@ -68,8 +69,15 @@ body{
     bottom: 0px;
     left: 0px;
     z-index: 99;
-    min-height: 40px;
+    height: 40px;
     width: 100%;
     background-color: rgba(211, 211, 211, 0.632);
-    overflow: hidden;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer .footerNote{
+    text-align: center;
+    font-size: 20px;
 }
